--- a/.github/ISSUE_TEMPLATE/SUBMIT-CAR-FORM.yml
+++ b/.github/ISSUE_TEMPLATE/SUBMIT-CAR-FORM.yml
@@ -1,5 +1,6 @@
 name: Submit Car
 description: submit a car to the repo
+labels: ["submission"]
 body:
   - type: markdown
     attributes:
@@ -29,11 +30,11 @@ body:
       placeholder: Enter names here... Multiple names should be separated with ,
     validations:
       required: true
-  - type: input
+  - type: textarea
     id: download
     attributes:
       label: Where can we get your car?
-      description: Provide us a download link to your car so it can also be added to the repo.
-      placeholder: Enter link here...
+      description: Provide us a download link to your car, or directly upload the file here, so it can also be added to the repo.
+      placeholder: Enter link or upload here...
     validations:
       required: true
